src/test/ui/union/issue-41073.stderr
error[E0740]: unions cannot contain fields that may need dropping
  --> $DIR/issue-41073.rs:4:5
   |
LL |     a: A,
   |     ^^^^
   |
   = note: a type is guaranteed not to need dropping when it implements `Copy`, or when it is the special `ManuallyDrop<_>` type
help: when the type does not implement `Copy`, wrap it inside a `ManuallyDrop<_>` and ensure it is manually dropped
   |
LL |     a: std::mem::ManuallyDrop<A>,
   |        +++++++++++++++++++++++ +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0740`.
